[package]
name = "sharkspotter"
version = "0.10.0"
authors = ["Rui Loura <rui@joyent.com>", "Jon Anderson <jon.anderson@joyent.com>"]
edition = "2018"

[dependencies]
assert_cli = "0.6.0"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
clap = "2.33.0"
libmanta = { git = "https://github.com/joyent/rust-libmanta", tag = "v0.7.0" }
moray = { git = "https://github.com/joyent/rust-moray", tag="v0.9.0" }
slog = { version = "2.5.2" }
slog-bunyan = { git = "https://github.com/kellymclaughlin/bunyan", branch = "build-on-smartos" }
trust-dns-resolver = "0.11.1"
slog-term = "2.4.1"

# We don't use this directly, but gotham pulls it in via the rust-url crate.
# If we don't specify the exact version here cargo will bring in a newer version
# that is not compatible with rust 1.35.
unicode-normalization = "=0.1.5"

# Until certain patches for diesel are checked into a version rust-libmanta will
# need this patch section, and so will any of it's dependents.
[patch.crates-io]
diesel = { git = 'https://github.com/diesel-rs/diesel' }
diesel_derives = { git = "https://github.com/diesel-rs/diesel" }

[features]
postgres = ["libmanta/postgres"]
