[package]
name = "sharkspotter"
version = "0.13.0"
authors = ["Rui Loura <rui@joyent.com>", "Jon Anderson <jon.anderson@joyent.com>"]
edition = "2018"

[dependencies]
assert_cli = "0.6.0"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
clap = "2.33.0"
cueball = "0.3.1"
libmanta = { git = "https://github.com/joyent/rust-libmanta", tag = "v0.7.0" }
moray = { git = "https://github.com/joyent/rust-moray" }
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_warn"] }
slog-bunyan = "2.2.0"
trust-dns-resolver = "0.11.1"
slog-term = "2.4.1"

# We don't use this directly, but gotham pulls it in via the rust-url crate.
# If we don't specify the exact version here cargo will bring in a newer version
# that is not compatible with rust 1.35.
unicode-normalization = "=0.1.5"
crossbeam-channel = "0.4.2"

[patch.crates-io]
# We require the use of certain constructs which unfortunately were not
# included in the latest released version of diesel (1.4.3).  We are hopeful
# that in a later version (presumably 1.4.4), they will be included, however
# the minimum rustc version required will surely be higher then -- minimally,
# at 1.37.  The patch tables below reference a version of diesel and related
# utility macros that rust-sharkspotter can safely use until we are able to move
# to an officially released version of diesel which hopefully has the structures
# and macros that we rely on.  In summary, there are two things that need to
# happen in the future to move to the next diesel release.  First, we need to
# upgrade rustc to something more current (ideally rustc 1.40) and then we need
# to confirm whether or not the new release of diesel will contain the
# constructs needed to successfully build rust-sharkspotter.  If it does not,
# then we will have to consider avenues for eliminating their use from within
# the rust-sharkspotter code.  Finally, dependencies listed in the patch section
# of this project are transitive, so they should also be used when builing any
# depedencies that also rely on diesel (which is a good thing).
diesel = { git = "https://github.com/diesel-rs/diesel", rev = "f75e930e166eb448e3c41d5cdc7251cfcad681f6"}
diesel_derives = { git = "https://github.com/diesel-rs/diesel" , rev = "f75e930e166eb448e3c41d5cdc7251cfcad681f6"}

[features]
postgres = ["libmanta/postgres"]
